view the data structure

--- a/udacity-lesson1.ipynb
+++ b/udacity-lesson1.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -190,7 +190,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,6 +198,152 @@
    "source": [
     "df = pandas.read_csv(\"candy_choices.csv\")\n",
     "df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    gender      candy                 flavor   age         ethnicity  \\\n",
+      "0        M     reeses                    NaN  26.0             white   \n",
+      "1        M     kitkat                    NaN  32.0             black   \n",
+      "2        F    airhead         double mystery  26.0             mixed   \n",
+      "3        M  starburst                    red  26.0             white   \n",
+      "4        F     reeses                    NaN  31.0             white   \n",
+      "5        F  starburst                    red  26.0             asian   \n",
+      "6        F   hersheys                   milk  27.0             asian   \n",
+      "7        M    airhead         double mystery  23.0             white   \n",
+      "8        M  starburst                   pink  26.0             asian   \n",
+      "9        M     reeses                    NaN  30.0             asian   \n",
+      "10       F       rolo                    NaN  26.0             mixed   \n",
+      "11       F     kitkat                    NaN  41.0             mixed   \n",
+      "12       F    airhead  strawberry/watermelon  24.0             white   \n",
+      "13       F     kitkat                    NaN  21.0             asian   \n",
+      "14       F     kitkat                    NaN  18.0             asian   \n",
+      "15       F     kitkat                    NaN  33.0             white   \n",
+      "16       M     kitkat                    NaN  23.0             asian   \n",
+      "17       M       rolo                    NaN  19.0             white   \n",
+      "18       F       rolo                    NaN  25.0             white   \n",
+      "19       F    airhead                    NaN  28.0             white   \n",
+      "20       M   hersheys                    NaN  28.0             white   \n",
+      "21       M     reeses                    NaN  21.0          hispanic   \n",
+      "22       M     reeses                    NaN  21.0          hispanic   \n",
+      "23       M     kitkat                    NaN  26.0             white   \n",
+      "24       M     kitkat                    NaN  26.0             white   \n",
+      "25       M    airhead  strawberry/watermelon  32.0             black   \n",
+      "26       M    airhead                    NaN  24.0             white   \n",
+      "27       M   hersheys                   dark  35.0  pacific islander   \n",
+      "28       F   hersheys                   milk  34.0             asian   \n",
+      "29       F     reeses                    NaN  24.0             white   \n",
+      "..     ...        ...                    ...   ...               ...   \n",
+      "144      M    airhead  strawberry/watermelon  25.0             asian   \n",
+      "145      F   hersheys                   milk  25.0             white   \n",
+      "146      M   hersheys                   dark   NaN             mixed   \n",
+      "147      F     kitkat                    NaN  21.0             asian   \n",
+      "148      M   hersheys                   dark  25.0             asian   \n",
+      "149      M   hersheys                   dark  25.0             asian   \n",
+      "150      M       rolo                    NaN  32.0             asian   \n",
+      "151      M       rolo                    NaN  32.0             asian   \n",
+      "152      F   hersheys                   dark  19.0             asian   \n",
+      "153      M       rolo                    NaN  44.0             asian   \n",
+      "154      M  starburst                    NaN  20.0             mixed   \n",
+      "155      M  starburst                    NaN  20.0             mixed   \n",
+      "156      M  starburst                    NaN  20.0             mixed   \n",
+      "157      F       rolo                    NaN  24.0             white   \n",
+      "158      F   hersheys                   dark  26.0             asian   \n",
+      "159      F     reeses                    NaN  33.0             white   \n",
+      "160      F   hersheys                    NaN  40.0             white   \n",
+      "161      F       rolo                    NaN  26.0             mixed   \n",
+      "162      F       rolo                    NaN  26.0             mixed   \n",
+      "163      M       rolo                    NaN  19.0             white   \n",
+      "164      M     reeses                    NaN  19.0             white   \n",
+      "165      M     reeses                    NaN  21.0          hispanic   \n",
+      "166      M     reeses                    NaN  21.0          hispanic   \n",
+      "167      M     reeses                    NaN  21.0          hispanic   \n",
+      "168      F   hersheys                    NaN  33.0             white   \n",
+      "169      F     reeses                    NaN  25.0             white   \n",
+      "170      M     reeses                    NaN  19.0             white   \n",
+      "171      M     reeses                    NaN  19.0             white   \n",
+      "172      M     reeses                    NaN  19.0             white   \n",
+      "173      M  starburst                    NaN  19.0             white   \n",
+      "\n",
+      "    shirt color  \n",
+      "0           red  \n",
+      "1         green  \n",
+      "2         white  \n",
+      "3           red  \n",
+      "4         black  \n",
+      "5          blue  \n",
+      "6         white  \n",
+      "7         black  \n",
+      "8         white  \n",
+      "9          pink  \n",
+      "10        white  \n",
+      "11         blue  \n",
+      "12         pink  \n",
+      "13         blue  \n",
+      "14        white  \n",
+      "15         blue  \n",
+      "16         gray  \n",
+      "17        black  \n",
+      "18        white  \n",
+      "19         blue  \n",
+      "20        black  \n",
+      "21        black  \n",
+      "22        black  \n",
+      "23          red  \n",
+      "24          red  \n",
+      "25        green  \n",
+      "26       purple  \n",
+      "27        black  \n",
+      "28          red  \n",
+      "29         pink  \n",
+      "..          ...  \n",
+      "144       black  \n",
+      "145       black  \n",
+      "146        blue  \n",
+      "147         red  \n",
+      "148       green  \n",
+      "149       green  \n",
+      "150        blue  \n",
+      "151        blue  \n",
+      "152        blue  \n",
+      "153       black  \n",
+      "154       green  \n",
+      "155       green  \n",
+      "156       green  \n",
+      "157         red  \n",
+      "158       beige  \n",
+      "159       green  \n",
+      "160       white  \n",
+      "161        blue  \n",
+      "162        blue  \n",
+      "163       black  \n",
+      "164       black  \n",
+      "165        blue  \n",
+      "166        blue  \n",
+      "167        blue  \n",
+      "168       green  \n",
+      "169       black  \n",
+      "170         red  \n",
+      "171         red  \n",
+      "172         red  \n",
+      "173        blue  \n",
+      "\n",
+      "[174 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#View the data in csv\n",
+    "print df"
    ]
   },
   {
