view column candy vaues

--- a/udacity-lesson1.ipynb
+++ b/udacity-lesson1.ipynb
@@ -368,7 +368,8 @@
     "        time_since_last[e]+=1\n",
     "            \n",
     "    time_since_last[item] = 0\n",
-    "    i += 1"
+    "    i += 1\n",
+    "print df[\"candy\".values]"
    ]
   },
   {
