view event_list

--- a/udacity-lesson1.ipynb
+++ b/udacity-lesson1.ipynb
@@ -348,7 +348,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['reeses' 'kitkat' 'airhead' 'starburst' 'reeses' 'starburst' 'hersheys'\n",
+      " 'airhead' 'starburst' 'reeses' 'rolo' 'kitkat' 'airhead' 'kitkat' 'kitkat'\n",
+      " 'kitkat' 'kitkat' 'rolo' 'rolo' 'airhead' 'hersheys' 'reeses' 'reeses'\n",
+      " 'kitkat' 'kitkat' 'airhead' 'airhead' 'hersheys' 'hersheys' 'reeses'\n",
+      " 'airhead' 'hersheys' 'starburst' 'kitkat' 'rolo' 'rolo' 'rolo' 'airhead'\n",
+      " 'reeses' 'hersheys' 'hersheys' 'starburst' 'kitkat' 'starburst' 'reeses'\n",
+      " 'kitkat' 'starburst' 'hersheys' 'reeses' 'kitkat' 'kitkat' 'hersheys'\n",
+      " 'starburst' 'hersheys' 'airhead' 'airhead' 'kitkat' 'hersheys' 'hersheys'\n",
+      " 'starburst' 'airhead' 'kitkat' 'reeses' 'reeses' 'reeses' 'hersheys'\n",
+      " 'starburst' 'kitkat' 'hersheys' 'kitkat' 'reeses' 'hersheys' 'rolo' 'rolo'\n",
+      " 'rolo' 'rolo' 'hersheys' 'hersheys' 'airhead' 'airhead' 'reeses' 'kitkat'\n",
+      " 'reeses' 'airhead' 'reeses' 'hersheys' 'reeses' 'hersheys' 'kitkat'\n",
+      " 'kitkat' 'kitkat' 'kitkat' 'kitkat' 'kitkat' 'kitkat' 'airhead' 'rolo'\n",
+      " 'reeses' 'airhead' 'kitkat' 'hersheys' 'kitkat' 'rolo' 'kitkat' 'rolo'\n",
+      " 'kitkat' 'reeses' 'reeses' 'airhead' 'hersheys' 'starburst' 'starburst'\n",
+      " 'hersheys' 'hersheys' 'airhead' 'airhead' 'kitkat' 'reeses' 'reeses'\n",
+      " 'airhead' 'airhead' 'reeses' 'starburst' 'kitkat' 'kitkat' 'kitkat'\n",
+      " 'kitkat' 'rolo' 'kitkat' 'hersheys' 'reeses' 'hersheys' 'hersheys'\n",
+      " 'hersheys' 'airhead' 'hersheys' 'reeses' 'kitkat' 'kitkat' 'rolo' 'rolo'\n",
+      " 'rolo' 'rolo' 'airhead' 'airhead' 'hersheys' 'hersheys' 'kitkat'\n",
+      " 'hersheys' 'hersheys' 'rolo' 'rolo' 'hersheys' 'rolo' 'starburst'\n",
+      " 'starburst' 'starburst' 'rolo' 'hersheys' 'reeses' 'hersheys' 'rolo'\n",
+      " 'rolo' 'rolo' 'reeses' 'reeses' 'reeses' 'reeses' 'hersheys' 'reeses'\n",
+      " 'reeses' 'reeses' 'reeses' 'starburst']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print df[\"candy\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -368,8 +410,26 @@
     "        time_since_last[e]+=1\n",
     "            \n",
     "    time_since_last[item] = 0\n",
-    "    i += 1\n",
-    "print df[\"candy\".values]"
+    "    i += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 'reeses', 3), (5, 'starburst', 1), (7, 'airhead', 4), (8, 'starburst', 2), (9, 'reeses', 4), (11, 'kitkat', 9), (12, 'airhead', 4), (13, 'kitkat', 1), (14, 'kitkat', 0), (15, 'kitkat', 0), (16, 'kitkat', 0), (17, 'rolo', 6), (18, 'rolo', 0), (19, 'airhead', 6), (20, 'hersheys', 13), (21, 'reeses', 11), (22, 'reeses', 0), (23, 'kitkat', 6), (24, 'kitkat', 0), (25, 'airhead', 5), (26, 'airhead', 0), (27, 'hersheys', 6), (28, 'hersheys', 0), (29, 'reeses', 6), (30, 'airhead', 3), (31, 'hersheys', 2), (32, 'starburst', 23), (33, 'kitkat', 8), (34, 'rolo', 15), (35, 'rolo', 0), (36, 'rolo', 0), (37, 'airhead', 6), (38, 'reeses', 8), (39, 'hersheys', 7), (40, 'hersheys', 0), (41, 'starburst', 8), (42, 'kitkat', 8), (43, 'starburst', 1), (44, 'reeses', 5), (45, 'kitkat', 2), (46, 'starburst', 2), (47, 'hersheys', 6), (48, 'reeses', 3), (49, 'kitkat', 3), (50, 'kitkat', 0), (51, 'hersheys', 3), (52, 'starburst', 5), (53, 'hersheys', 1), (54, 'airhead', 16), (55, 'airhead', 0), (56, 'kitkat', 5), (57, 'hersheys', 3), (58, 'hersheys', 0), (59, 'starburst', 6), (60, 'airhead', 4), (61, 'kitkat', 4), (62, 'reeses', 13), (63, 'reeses', 0), (64, 'reeses', 0), (65, 'hersheys', 6), (66, 'starburst', 6), (67, 'kitkat', 5), (68, 'hersheys', 2), (69, 'kitkat', 1), (70, 'reeses', 5), (71, 'hersheys', 2), (72, 'rolo', 35), (73, 'rolo', 0), (74, 'rolo', 0), (75, 'rolo', 0), (76, 'hersheys', 4), (77, 'hersheys', 0), (78, 'airhead', 17), (79, 'airhead', 0), (80, 'reeses', 9), (81, 'kitkat', 11), (82, 'reeses', 1), (83, 'airhead', 3), (84, 'reeses', 1), (85, 'hersheys', 7), (86, 'reeses', 1), (87, 'hersheys', 1), (88, 'kitkat', 6), (89, 'kitkat', 0), (90, 'kitkat', 0), (91, 'kitkat', 0), (92, 'kitkat', 0), (93, 'kitkat', 0), (94, 'kitkat', 0), (95, 'airhead', 11), (96, 'rolo', 20), (97, 'reeses', 10), (98, 'airhead', 2), (99, 'kitkat', 4), (100, 'hersheys', 12), (101, 'kitkat', 1), (102, 'rolo', 5), (103, 'kitkat', 1), (104, 'rolo', 1), (105, 'kitkat', 1), (106, 'reeses', 8), (107, 'reeses', 0), (108, 'airhead', 9), (109, 'hersheys', 8), (110, 'starburst', 43), (111, 'starburst', 0), (112, 'hersheys', 2), (113, 'hersheys', 0), (114, 'airhead', 5), (115, 'airhead', 0), (116, 'kitkat', 10), (117, 'reeses', 9), (118, 'reeses', 0), (119, 'airhead', 3), (120, 'airhead', 0), (121, 'reeses', 2), (122, 'starburst', 10), (123, 'kitkat', 6), (124, 'kitkat', 0), (125, 'kitkat', 0), (126, 'kitkat', 0), (127, 'rolo', 22), (128, 'kitkat', 1), (129, 'hersheys', 15), (130, 'reeses', 8), (131, 'hersheys', 1), (132, 'hersheys', 0), (133, 'hersheys', 0), (134, 'airhead', 13), (135, 'hersheys', 1), (136, 'reeses', 5), (137, 'kitkat', 8), (138, 'kitkat', 0), (139, 'rolo', 11), (140, 'rolo', 0), (141, 'rolo', 0), (142, 'rolo', 0), (143, 'airhead', 8), (144, 'airhead', 0), (145, 'hersheys', 9), (146, 'hersheys', 0), (147, 'kitkat', 8), (148, 'hersheys', 1), (149, 'hersheys', 0), (150, 'rolo', 7), (151, 'rolo', 0), (152, 'hersheys', 2), (153, 'rolo', 1), (154, 'starburst', 31), (155, 'starburst', 0), (156, 'starburst', 0), (157, 'rolo', 3), (158, 'hersheys', 5), (159, 'reeses', 22), (160, 'hersheys', 1), (161, 'rolo', 3), (162, 'rolo', 0), (163, 'rolo', 0), (164, 'reeses', 4), (165, 'reeses', 0), (166, 'reeses', 0), (167, 'reeses', 0), (168, 'hersheys', 7), (169, 'reeses', 1), (170, 'reeses', 0), (171, 'reeses', 0), (172, 'reeses', 0), (173, 'starburst', 16)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print event_list"
    ]
   },
   {
