time since last

--- a/udacity-lesson1.ipynb
+++ b/udacity-lesson1.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -430,6 +430,17 @@
    ],
    "source": [
     "print event_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print time_since_last"
    ]
   },
   {
