--- a/udacity-lesson1.ipynb
+++ b/udacity-lesson1.ipynb
@@ -434,11 +434,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hersheys': 5, 'starburst': 0, 'airhead': 29, 'kitkat': 26, 'rolo': 10, 'reeses': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "print time_since_last"
    ]
